# generator

./: .gitmodules  CMakeLists.txt  Generator.c  README.md  functions.c  functions.cpp  geneTreeGeneration.cpp  geneTreeGeneration.h  generateGeneTree.cpp  generator.c  generator.cpp  taxaDistribution.c  test.tre  testgene.tre  treePreparation.cpp  treePreparation.h
